@@ -293,7 +293,10 @@ zero_corruption_when_off = true
 ; mods that enable city building or improvement of water tiles.
 disallow_land_units_from_affecting_water_tiles = true
 
+; Allows units to move after airdropping by making airdrops cost no movement. Under the standard game rules, units lose all their remaining moves
+; after airdropping. Units will be prevented from airdropping more than once in the same turn.
 dont_end_units_turn_after_airdrop = false
+
 allow_airdrop_without_airport = false
 enable_negative_pop_pollution = true
 
